fixed spacing for iphone and browser zoom in and out

--- a/app/assets/stylesheets/clocks.css
+++ b/app/assets/stylesheets/clocks.css
@@ -16,6 +16,7 @@
   padding: 0;
   left: 0;
   top: 0;
+  width: 100%;
   min-width: 1300px;
   /*width: 100%;*/
   background-image: image-url('1.jpg');
