--- a/app/assets/stylesheets/footer.css
+++ b/app/assets/stylesheets/footer.css
@@ -4,6 +4,7 @@ footer {
 /*  position: absolute;
   bottom: 0;*/
   height: 50px;
+  width: 100%;
   min-width: 1300px;
   float: center;
 }
